fix(): fix overlapping issue with hero and invite section

--- a/app/client/components/invitation/HeroSection.scss
+++ b/app/client/components/invitation/HeroSection.scss
@@ -2,7 +2,6 @@
 
 .section-hero {
 	height: 100%;
-	min-height: 600px;
 	position: relative;
 	padding-bottom: 5vh;
 
